# noita-svld

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/backup/: commands.rs  fs_ops.rs  meta_data.rs  mod.rs  service.rs  zip.rs
src-tauri/src/units/: backup.rs  dashboard.rs  db_path.rs  file.rs  log.rs  mod.rs  path.rs  update.rs
src/components/: backups.css  backups.rs  data.rs  log.rs  mod.rs  path.css  path.rs  sideBar.rs  version.rs
src/css/: app.css  backups.css  index.css  log.css  path.css  sideBar.css  version.css
src/pages/: backup.rs  index.rs  info.rs  mod.rs  setting.rs
