[package]
name = "svld-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
anyhow = "1.0"
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1"


[workspace]
members = ["src-tauri"]
