[package]
name = "svld"
version = "0.1.0"
edition = "2021"
description = "A Tauri-based save file management application"
authors = ["Auceptin"]
license = "AGPL-3.0"
repository = "https://github.com/AuceptinFang/noita-svld"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "svld_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.0"
log = "0.4"
chrono = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
dotenvy = "0.15.7"
dirs = "6.0.0"
walkdir = "2.2.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "time"], default-features = false }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["serde", "macros"] }
urlencoding = "2.1"

# 并行目录遍历
jwalk = "0.8.1"
sha2 = "0.11.0-rc.3"
#并行计算
rayon = "1.11.0"
hex = "0.4"

